Adjusted image max-width to stop images overflowing due to imprecise scrolling

--- a/flask/2025_11_03_Rugby_Website/project/static/animations.css
+++ b/flask/2025_11_03_Rugby_Website/project/static/animations.css
@@ -111,7 +111,7 @@
     white-space: nowrap;
 
     & img {
-        max-width: 100%;
+        max-width: 90%;
         min-width: 90%;
     }
     & .wrapper {
